fix(ui): german translation for debit - remove scrollbar on dashboard

--- a/translations/de.csv
+++ b/translations/de.csv
@@ -160,7 +160,7 @@ Dashboard,Dashboard,
 Date,Datum,
 "Date Format","Datum Format",
 Day,,
-Debit,Lastschrift,
+Debit,Soll,
 "Debit Note",,
 Debtors,Debitoren,
 "Default Account",Standard-Konto,
