added QoL fixes to German translations

--- a/translations/de.csv
+++ b/translations/de.csv
@@ -36,7 +36,7 @@
 "23-03-2022",,
 "23.03.2022",,
 "23/03/2022",,
-"9888900000",,
+"9888900000","+49 123 123123",
 "A submittable entry is deleted only if it is in the cancelled state.","Ein buchbarer Eintrag wird nur gelöscht, wenn er storniert ist.",
 "Account","Konto",
 "Account ${0} does not exist.","Konto ${0} existiert nicht",
@@ -796,7 +796,7 @@
 "StockTransfer","Warenbestandsübertragung",
 "Stores","Filialen",
 "Su","So",
-"Submit","OK",
+"Submit","Buchen",
 "Submit ${0}?","${0} buchen?",
 "Submit entries?","Einträge buchen?",
 "Submitted","Gebucht",
@@ -871,12 +871,12 @@
 "Total Profit","Gesamtgewinn",
 "Total Spending","Gesamtausgaben",
 "Track Item","Posten verfolgen",
-"Transfer","Übertragung",
+"Transfer","Überweisung",
 "Transfer No","Überweisungs-Nr.",
-"Transfer Type","Art der Übertragung",
-"Transfer Unit","Übertragungseinheit",
+"Transfer Type","Art der Überweisung",
+"Transfer Unit","Überweisungseinheit",
 "Transfer Unit ${0} is not applicable for Item ${1}","Transfereinheit ${0} ist nicht anwendbar für Artikel ${1}",
-"Transfer will cause future entries to have negative stock.","Die Übertragung wird dazu führen, dass zukünftige Einträge einen negativen Bestand haben.",
+"Transfer will cause future entries to have negative stock.","Die Überweisung wird dazu führen, dass zukünftige Einträge einen negativen Bestand haben.",
 "Travel Expenses","Reisekosten",
 "Trial Balance","Summenbilanz",
 "Tu","Di",
