--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -356,8 +356,7 @@ Notes,ملاحظات,
 "Number Series","سلسلة الأرقام",
 "Number of ${0}",,
 "Office Equipments","معدات مكتبية",
-"Office 
-tenance Expenses","مصاريف صيانة المكاتب",
+"Office Maintenance Expenses","مصاريف صيانة المكاتب",
 "Office Rent","إيجار مكتب",
 "Onboarding Complete","اكتمال الإعداد",
 "Open Folder","فتح مجلد",
