fix:translation text errors

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -31,12 +31,12 @@
 03-23-2022,03-23-2022,
 03/23/2022,03/23/2022,
 "1 filter applied","应用了 1 个过滤器",
-2022-03-23,,
+2022-03-23,2022-03-23,
 "23 Mar, 2022","23 03, 2022",
 23-03-2022,23-03-2022,
 23.03.2022,23.03.2022,
 23/03/2022,23/03/2022,
-9888900000,9888900000,
+9888900000,电话号码,
 "A submittable entry is deleted only if it is in the cancelled state.",只有当可提交条目处于取消状态时，才会删除该条目,
 Account,科目,
 "Account ${0} does not exist.",账户 ${0} 不存在,
@@ -79,7 +79,7 @@ Address,地址,
 "Administrative Expenses",行政开支,
 All,全部,
 Amount,总计,
-"Amount Paid",,
+"Amount Paid",付款金额,
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","金额：${0} 和注销：${1} 少于分配给参考的总金额：${2}。",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","金额：${0} 小于分配给参考的总金额：${1}。",
 Amounts,金额,
@@ -104,7 +104,7 @@ August,八月,
 "Auto Payments",自动支付,
 "Auto Stock Transfer",自动库存转移,
 Autocomplete,自动完成,
-"Back Reference",反向引用,
+"Back Reference",反向关联,
 "Bad import data, could not read file.",导入数据错误，无法读取文件,
 Balance,平衡,
 "Balance Sheet",资产负债表,
@@ -149,7 +149,7 @@ Cashflow,现金周转,
 "Central Tax",中央税率,
 "Change DB",更改数据库,
 "Change File",更改文件,
-"Change Ref Type",更改引用类型,
+"Change Ref Type",更改关联类型,
 "Changes made to settings will be visible on reload.",对设置所做的更改将在重新加载时可见,
 Chargeable,收费,
 "Chart Of Accounts Reviewed",已审核的会计科目表,
@@ -160,7 +160,7 @@ Cheque,检查,
 Clear,清除,
 "Clearance Date",清仓日期,
 Close,关闭,
-"Close Frappe Books and try manually.",,
+"Close Frappe Books and try manually.",关闭Frappe Books并手动尝试,
 "Close Quick Search",关闭快速搜索,
 Closing,正在关闭,
 "Closing (Cr)","正在关闭 (贷方)",
@@ -190,7 +190,7 @@ Country,国家,
 "Country code used to initialize regional settings.",用于初始化区域设置的国家/地区代码。,
 Courier,快递,
 Cr.,贷方,
-"Cr. ${0}",,
+"Cr. ${0}",贷方 ${0},
 Create,创建,
 "Create Demo",创建演示,
 "Create Purchase",创建采购,
@@ -244,7 +244,7 @@ December,十二月,
 "Decrease print template display scale",降低打印模板显示比例,
 Default,默认,
 "Default Account",默认帐户,
-"Default Location",默认位置,
+"Default Location",默认仓库,
 Defaults,默认,
 Delete,删除,
 "Delete ${0}?","删除 ${0}？",
@@ -352,7 +352,7 @@ Filter,过滤器,
 "Fixed Asset",固定资产,
 "Fixed Assets",固定资产,
 Float,浮动,
-"Following cells have errors: ${0}.",,
+"Following cells have errors: ${0}.",以下单元格有错误: ${0},
 "Following links do not exist: ${absentLinks .map((l) =>",以下链接不存在: ${absentLinks .map((l) =>,
 Font,字体,
 "For Purchase",用于采购,
@@ -457,8 +457,8 @@ Item,商品,
 "Item Description",商品描述,
 "Item Name",商品名称,
 "Item Prices",产品价格,
-"Item with From location not found",未找到带有发件人位置的商品,
-"Item with To location not found",未找到含有收件人位置的商品,
+"Item with From location not found",未找到带有发件人仓库的商品,
+"Item with To location not found",未找到含有收件人仓库的商品,
 "Item with barcode ${0} not found.",未找到带有条形码 ${0} 的商品,
 Items,商品,
 January,一月,
@@ -491,9 +491,9 @@ List,列表,
 Loading...,正在加载...,
 "Loans (Liabilities)",贷款（负债）,
 "Loans and Advances (Assets)",贷款和垫款（资产）,
-Locale,区域设置,
-Location,位置,
-"Location Name",位置名称,
+Locale,仓库设置,
+Location,仓库,
+"Location Name",仓库名,
 Logo,徽标,
 "Make Entry",进行条目,
 "Make Payment On Submit",提交时付款,
@@ -555,7 +555,7 @@ None,无,
 "Not Saved",未保存,
 "Not Submitted",未提交,
 "Not Transferred",未转让,
-Notes,笔记,
+Notes,备注,
 November,十一月,
 "Number Display",数字显示,
 "Number Series",系列号,
@@ -629,7 +629,7 @@ Place,场所,
 "Please fill all values.",请填写所有数值,
 "Please restart and try again.",请重新启动并再试一次,
 "Please select a Print Template",请选择打印模板,
-"Please select a valid reference type.",请选择有效的引用类型。,
+"Please select a valid reference type.",请选择有效的关联类型。,
 "Please set GSTIN in General Settings.",请在常规设置中设置 GSTIN,
 "Please set Round Off Account in the Settings.",请在设置中设置四舍五入账户,
 "Please set a Display Doc",请设置显示文档,
@@ -657,7 +657,7 @@ Purchase,采购,
 "Purchase Acc.",购买协议,
 "Purchase Invoice",采购订单,
 "Purchase Invoice Item",采购订单商品,
-"Purchase Invoice Number Series",采购订单编号系列,
+"Purchase Invoice Number Series",采购订单编号,
 "Purchase Invoice Print Template",采购订单打印模板,
 "Purchase Invoice Terms",采购订单条款,
 "Purchase Invoices",采购订单,
@@ -669,7 +669,7 @@ Purchase,采购,
 "Purchase Payments",采购付款,
 "Purchase Receipt",入库单,
 "Purchase Receipt Item",入库商品,
-"Purchase Receipt Location",入库位置,
+"Purchase Receipt Location",入库仓,
 "Purchase Receipt Number Series",入库单编号,
 "Purchase Receipt Print Template",入库单打印模板,
 "Purchase Receipt Terms",采购条款,
@@ -694,17 +694,17 @@ Rate,价格,
 Receivable,应收账款,
 Receive,收到,
 Red,红色,
-"Ref Name",引用名称,
-"Ref Type",引用类型,
-"Ref. / Cheque No.","引用 /检查号码",
-"Ref. Date",引用日期,
-"Ref. Name",引用姓名,
-"Ref. Type",引用类型,
-Reference,引用,
-"Reference Date",引用日期,
-"Reference Number",引用编号,
-"Reference Type",引用类型,
-References,参考资料,
+"Ref Name",关联名称,
+"Ref Type",关联类型,
+"Ref. / Cheque No.","关联/检查号码",
+"Ref. Date",关联日期,
+"Ref. Name",关联单号,
+"Ref. Type",关联类型,
+Reference,关联,
+"Reference Date",关联日期,
+"Reference Number",关联单号,
+"Reference Type",关联类型,
+References,关联资料,
 "Reload Frappe Books?",重新加载 Frappe Books?,
 Report,报告,
 "Report Error",报告错误,
@@ -791,7 +791,7 @@ Service,服务,
 "Set Print Size",设置打印尺寸,
 "Set Up",设置,
 "Set Up Your Workspace",设置您的工作区,
-"Set a Template value to see the Print Template",,
+"Set a Template value to see the Print Template",设置“模板”值以查看“打印模板”,
 "Set an Import Type",设置导入类型,
 "Set the display language.",设置显示语言。,
 "Set the local code. This is used for number formatting.","设置本地代码。 这用于数字格式。",
@@ -808,20 +808,20 @@ Setup,设置,
 "Setup Complete",设置完成,
 "Setup Wizard",安装向导,
 "Setup system defaults like date format and display precision",设置系统默认值，如日期格式和显示精度,
-Shipment,发货,
+Shipment,发货单,
 "Shipment Item",发货商品,
-"Shipment Location",发货地点,
-"Shipment Number Series",发货编号,
-"Shipment Print Template",发货打印模板,
+"Shipment Location",发货仓,
+"Shipment Number Series",发货单编号,
+"Shipment Print Template",发货单打印模板,
 "Shipment Terms",发货条款,
 Shortcuts,快捷方式,
 "Should entries be submitted after syncing?",是否应在同步后提交参赛作品？,
 "Show HSN",显示 HSN,
 "Show Me",给我看看,
-"Show Month/Year",,
+"Show Month/Year",显示月份/年份,
 "Single Value",单值,
-"Skip Child Tables",,
-"Skip Transactions",,
+"Skip Child Tables",跳过表,
+"Skip Transactions",跳过业务,
 "Smallest Currency Fraction Value",最小货币分数值,
 Softwares,软件,
 "Something has gone terribly wrong. Please check the console and raise an issue.","发生了严重的错误。 请检查控制台并提出问题。",
@@ -846,8 +846,8 @@ Stock,股票,
 "Stock Movement",库存调拨,
 "Stock Movement Item",库存调拨,
 "Stock Movement No.",库存调拨,
-"Stock Movement Number Series",库存调拨编号,
-"Stock Movement Print Template",库存调拨打印模板,
+"Stock Movement Number Series",调拨单编号,
+"Stock Movement Print Template",调拨单打印模板,
 "Stock Movements",库存调拨,
 "Stock Not Received",在途库存,
 "Stock Not Shipped",未发货库存,
@@ -916,7 +916,7 @@ To,到,
 "To Account",到账,
 "To Account and From Account can't be the same: ${0}",到账户和从帐户不能相同：${0},
 "To Date",到日期,
-"To Loc.",入库位置,
+"To Loc.",入库仓,
 "To Year",到年,
 "Toggle Edit Mode",切换编辑模式,
 "Toggle Key Hints",切换按键提示,
@@ -979,12 +979,12 @@ View,查看,
 "View Stock Entries",查看库存条目,
 "View Unpaid Invoices",查看未支付发票,
 "View linked entries",查看链接条目,
-We,,
+We,我们,
 "Welcome to Frappe Books","欢迎使用 Frappe Books",
 "Width (in cm)",宽度 (cm),
 "Write Off",注销,
 "Write Off Account",注销账户,
-"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings",,
+"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings",注销帐户 ${0} 不存在。请在常规设置中设置核销科目,
 "Write Off Account not set. Please set Write Off Account in General Settings","未设置注销帐户。 请在通用设置中设置注销账户",
 "Write Off Entry",注销条目,
 "Year to Date",年初至今,
@@ -994,7 +994,7 @@ Yellow,黄色,
 Yes,是,
 "check values and click on",检查值并单击,
 "in Batch ${0}",在批次 ${0} 中,
-john@doe.com,john@doe.com,
+john@doe.com,电子邮件,
 "to apply changes",应用更改,
 Basic - Sales Invoice,基本 - 销售订单,
 Basic - Purchase Invoice,基本 - 采购订单,
@@ -1004,4 +1004,10 @@ Minimal - Sales Invoice,极简 - 销售订单,
 Minimal - Purchase Invoice,极简 - 采购订单,
 False,否,
 PrintTemplate,打印模板,
-Main,主要,
+"Main",主要,
+Incoming rate,采购价格,
+Balance Value,余额,
+Valuation Rate,估值,
+Value Change,价值变动,
+Balance Qty.,库存量,
+Quantity,数量,
