fix:translation text errors

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -144,7 +144,7 @@ Cancelled,取消,
 "Capital Stock",资本存量,
 Cash,现金,
 "Cash Entry",现金入账,
-"Cash In Hand",手头现金,
+"Cash In Hand",库存现金,
 Cashflow,现金周转,
 "Central Tax",中央税率,
 "Change DB",更改数据库,
@@ -156,7 +156,7 @@ Chargeable,收费,
 "Chart of Accounts",会计科目表,
 Check,检查,
 Cheque,检查,
-"City / Town",城市/城镇,
+"City / Town",城市,
 Clear,清除,
 "Clearance Date",清仓日期,
 Close,关闭,
@@ -206,8 +206,8 @@ Create,创建,
 "Create your first sales invoice for the created customer",为创建的客户创建第一张销售订单,
 Created,已创建,
 "Created By",创建者,
-"Creating Items and Parties",创建物品和派对,
-"Creating Journal Entries",创建日记帐分录,
+"Creating Items and Parties",创建物品和客户,
+"Creating Journal Entries",创建日记帐,
 "Creating Purchase Invoices",创建采购订单,
 Credit,贷方,
 "Credit Card Entry",信用卡入口,
@@ -463,9 +463,9 @@ Item,商品,
 Items,商品,
 January,一月,
 "John Doe","John Doe",
-"Journal Entries",日记帐分录,
-"Journal Entry",日记帐分录,
-"Journal Entry Account",日记帐分录帐户,
+"Journal Entries",日记帐,
+"Journal Entry",日记帐,
+"Journal Entry Account",日记帐帐户,
 "Journal Entry Number Series",日记账编号系列,
 "Journal Entry Print Template",日记条目打印模板,
 July,七月,
@@ -815,7 +815,7 @@ Shipment,发货单,
 "Shipment Print Template",发货单打印模板,
 "Shipment Terms",发货条款,
 Shortcuts,快捷方式,
-"Should entries be submitted after syncing?",是否应在同步后提交参赛作品？,
+"Should entries be submitted after syncing?",是否在同步后提交？,
 "Show HSN",显示 HSN,
 "Show Me",给我看看,
 "Show Month/Year",显示月份/年份,
