fix:translation text errors

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -843,12 +843,12 @@ Stock,股票,
 "Stock Ledger",库存分类账,
 "Stock Ledger Entry",库存分类账输入,
 "Stock Liabilities",股票负债,
-"Stock Movement",库存调拨,
+"Stock Movement",调拨单,
 "Stock Movement Item",库存调拨,
 "Stock Movement No.",库存调拨,
 "Stock Movement Number Series",调拨单编号,
 "Stock Movement Print Template",调拨单打印模板,
-"Stock Movements",库存调拨,
+"Stock Movements",调拨单,
 "Stock Not Received",在途库存,
 "Stock Not Shipped",未发货库存,
 "Stock Not Transferred",未转移库存,
@@ -996,18 +996,13 @@ Yes,是,
 "in Batch ${0}",在批次 ${0} 中,
 john@doe.com,电子邮件,
 "to apply changes",应用更改,
-Basic - Sales Invoice,基本 - 销售订单,
-Basic - Purchase Invoice,基本 - 采购订单,
-Business - Sales Invoice,业务 - 销售订单,
-Business - Purchase Invoice,业务 - 采购订单,
-Minimal - Sales Invoice,极简 - 销售订单,
-Minimal - Purchase Invoice,极简 - 采购订单,
 False,否,
 PrintTemplate,打印模板,
 "Main",主要,
 Incoming rate,采购价格,
-Balance Value,余额,
 Valuation Rate,估值,
 Value Change,价值变动,
-Balance Qty.,库存量,
-Quantity,数量,
+Balance Qty.,库存数量,
+Opening Value,期初价值,
+Opening Qty.,期初数量,
+Balance Value,库存价值,
