修正:翻译内容错误

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -743,9 +743,9 @@ Sales,销售,
 "Sales Item",销售产品,
 "Sales Item Created",已创建销售商品,
 "Sales Items",销售商品,
-"Sales Payment",销售付款,
-"Sales Payment Account",销售付款账户,
-"Sales Payments",销售付款,
+"Sales Payment",收款单,
+"Sales Payment Account",收款账户,
+"Sales Payments",收款单,
 "Sales and Purchase",销售和采购,
 Save,保存,
 "Save ${0}?",保存 ${0}?,
