fix:translation text errors

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -66,8 +66,8 @@ Active,有效,
 "Add a remark",添加备注,
 "Add attachment",添加附件,
 "Add invoice terms",添加发票条款,
-"Add products or services that you buy from your suppliers",添加您从供应商处购买的产品或服务,
-"Add products or services that you sell to your customers",添加您向客户销售的产品或服务,
+"Add products or services that you buy from your suppliers",添加您从供应商处购买的商品或服务,
+"Add products or services that you sell to your customers",添加您向客户销售的商品或服务,
 "Add transfer terms",添加转账条款,
 "Additional ${0} Serial Numbers required for ${1} quantity of ${2}.",数量为 ${2} 的 ${1} 所需的额外$ ${0} 序列号,
 "Additional quantity (${0}) required${1} to make outward transfer of item ${2} from ${3} on ${4}",额外数量 (${0}) 需要 ${1} 才能在 ${4} 从 ${3} 向外转移商品 ${2},
@@ -145,7 +145,7 @@ Cancelled,取消,
 Cash,现金,
 "Cash Entry",现金入账,
 "Cash In Hand",库存现金,
-Cashflow,现金周转,
+Cashflow,现金流,
 "Central Tax",中央税率,
 "Change DB",更改数据库,
 "Change File",更改文件,
@@ -314,7 +314,7 @@ Entry,条目,
 "Entry No.",条目编号,
 "Entry Type",输入类型,
 "Entry has Grand Total ${0}. Please verify amounts.",条目的总计为 ${0}。请核实金额,
-Equity,股权,
+Equity,权益,
 Error,错误,
 "Exchange Gain/Loss",汇兑收益/亏损,
 "Exchange Rate",汇率,
@@ -323,7 +323,7 @@ Error,错误,
 Expand,展开,
 Expense,费用,
 "Expense Account",费用账户,
-Expenses,花费,
+Expenses,成本,
 "Expenses Included In Valuation",计价费用,
 "Expiry Date",截止日期,
 Export,导出,
@@ -413,7 +413,7 @@ Image,图像,
 "Importer not set, reload tool",导入器未设置，重新加载工具,
 Inactive,不活跃的,
 "Include Cancelled",包括已取消,
-Income,收入,
+Income,损益,
 "Income Account",收入账户,
 "Increase print template display scale",增加打印模板显示比例,
 Indigo,靛蓝,
@@ -456,18 +456,18 @@ Item,商品,
 "Item ${0} is not a batched item",商品 ${0} 不是批次商品,
 "Item Description",商品描述,
 "Item Name",商品名称,
-"Item Prices",产品价格,
+"Item Prices",商品价格,
 "Item with From location not found",未找到带有发件人仓库的商品,
 "Item with To location not found",未找到含有收件人仓库的商品,
 "Item with barcode ${0} not found.",未找到带有条形码 ${0} 的商品,
 Items,商品,
 January,一月,
-"John Doe","John Doe",
+"John Doe","全名",
 "Journal Entries",日记帐,
 "Journal Entry",日记帐,
 "Journal Entry Account",日记帐帐户,
-"Journal Entry Number Series",日记账编号系列,
-"Journal Entry Print Template",日记条目打印模板,
+"Journal Entry Number Series",日记账编号,
+"Journal Entry Print Template",日记帐打印模板,
 July,七月,
 June,六月,
 "Key Hints",关键提示,
@@ -650,7 +650,7 @@ Print,打印,
 "Print Templates",打印模板,
 "Print View",打印查看,
 "Print and Stationery",打印和文具,
-Product,产品,
+Product,商品,
 "Profit And Loss",收益与损失,
 "Profit and Loss",收益与损失,
 Purchase,采购,
@@ -664,9 +664,9 @@ Purchase,采购,
 "Purchase Item",采购商品,
 "Purchase Item Created",已创建采购商品,
 "Purchase Items",采购商品,
-"Purchase Payment",采购付款,
-"Purchase Payment Account",采购付款账户,
-"Purchase Payments",采购付款,
+"Purchase Payment",付款单,
+"Purchase Payment Account",付款账户,
+"Purchase Payments",付款单,
 "Purchase Receipt",入库单,
 "Purchase Receipt Item",入库商品,
 "Purchase Receipt Location",入库仓,
@@ -740,7 +740,7 @@ Sales,销售,
 "Sales Invoice Print Template",销售订单打印模板,
 "Sales Invoice Terms",销售订单条款,
 "Sales Invoices",销售订单,
-"Sales Item",销售产品,
+"Sales Item",销售商品,
 "Sales Item Created",已创建销售商品,
 "Sales Items",销售商品,
 "Sales Payment",收款单,
