feat: #151 Add quote object and allow create invoice from it
Also allow changing a print template type, necessary to create a custom
print template for this.

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -52,8 +52,8 @@ Accounts,Comptes,
 "Accounts Payable","Comptes créditeurs",
 "Accounts Receivable","Comptes débiteurs",
 "Accumulated Depreciation","Amortissement cumulé",
-Action,,
-Active,,
+Action,Action,
+Active,Actif,
 "Add Account","Ajouter un compte",
 "Add Customers","Ajouter des clients",
 "Add Group","Ajouter un groupe",
@@ -689,6 +689,8 @@ Quarterly,Trimestriel,
 Quarters,Trimestres,
 "Quick Search",,
 "Quick edit error: ${0} entry has no name.",,
+"Quote","Devis",
+"Quote Reference","Référence du devis",
 Rate,Tarif,
 "Rate (${0}) cannot be less zero.","Le Tarif (${0}) ne peut pas être inférieur à zéro.",
 "Rate (${0}) has to be greater than zero",,
@@ -739,6 +741,9 @@ Sales,Ventes,
 "Sales Acc.",,
 "Sales Expenses","Frais de vente",
 "Sales Invoice","Facture de vente",
+"Sales Quote","Devis de vente",
+"Sales Quote Number Series",,
+"Sales Quote Print Template",,
 "Sales Invoice Item","Facture de vente d'article",
 "Sales Invoice Number Series",,
 "Sales Invoice Print Template",,
@@ -792,7 +797,8 @@ September,,
 Service,,
 "Set Discount Amount","Définir le montant de la réduction",
 "Set Period",,
-"Set Print Size",,
+"Set Print Size","Définir le format de page",
+"Set Template Type","Définir le type de modèle",
 "Set Up",Configurer,
 "Set Up Your Workspace","Configurez votre espace de travail",
 "Set a Template value to see the Print Template",,
