--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -1,3 +1,4 @@
+${0},,
 "${0} ${1} already exists.","${0} ${1} existe déjà.",
 "${0} ${1} does not exist",,
 "${0} ${1} has been modified after loading please reload entry.",,
@@ -70,6 +71,7 @@ Active,Actif,
 "Add products or services that you buy from your suppliers","Ajoutez des produits ou services que vous achetez à vos fournisseurs",
 "Add products or services that you sell to your customers","Ajouter les produits ou services que vous vendez à vos clients",
 "Add transfer terms",,
+"Add'l Discounts",,
 "Additional ${0} Serial Numbers required for ${1} quantity of ${2}.",,
 "Additional quantity (${0}) required${1} to make outward transfer of item ${2} from ${3} on ${4}",,
 Address,Adresse,
@@ -105,9 +107,11 @@ August,,
 "Auto Payments",,
 "Auto Stock Transfer",,
 Autocomplete,,
+Back,,
 "Back Reference",,
 "Bad import data, could not read file.",,
 Balance,Balance,
+"Balance Amount",,
 "Balance Sheet","Bilan Comptable",
 Bank,Banque,
 "Bank Accounts","Comptes bancaires",
@@ -138,6 +142,7 @@ Cancelled,Annulé,
 "Cannot Import",,
 "Cannot Open File",,
 "Cannot cancel ${0} ${1} because of the following ${2}: ${3}",,
+"Cannot cancel ${0} because of the following ${1}: ${2}",,
 "Cannot delete ${0} ""${1}"" because of linked entries.",,
 "Cannot open file",,
 "Cannot perform operation.",,
@@ -145,6 +150,7 @@ Cancelled,Annulé,
 "Capital Equipments","Biens d'équipement",
 "Capital Stock","Capital social",
 Cash,Espèces,
+"Cash Denominations",,
 "Cash Entry","Entrée d'argent",
 "Cash In Hand","Liquidités en main",
 Cashflow,"Flux d'argent",
@@ -163,10 +169,15 @@ Clear,Effacer,
 "Clearance Date","Date d'autorisation",
 Close,Fermer,
 "Close Frappe Books and try manually.",,
+"Close POS Shift",,
 "Close Quick Search",,
 Closing,Fermeture,
+"Closing ${0} Amount can not be negative.",,
 "Closing (Cr)","Fermeture (Cr)",
 "Closing (Dr)","Fermeture (Dr)",
+"Closing Amount",,
+"Closing Cash In Denominations",,
+"Closing Date",,
 Collapse,Réduire,
 Color,Couleur,
 "Commission on Sales","Commission sur les ventes",
@@ -187,6 +198,8 @@ Contains,Contient,
 "Cost Of Goods Sold Acc.",,
 "Cost of Goods Sold","Coût des marchandises vendues",
 "Could not connect to database file ${0}, please select the file manually",,
+Count,,
+"Counter Cash Account",,
 Country,Pays,
 "Country Code","Code du Pays",
 "Country code used to initialize regional settings.","Code du Pays utilisé pour initialiser les réglages régionaux.",
@@ -246,6 +259,7 @@ December,,
 "Decrease print template display scale",,
 Default,,
 "Default Account","Compte par défaut",
+"Default Cash Denominations",,
 "Default Location",,
 Defaults,,
 Delete,Supprimer,
@@ -254,10 +268,12 @@ Delete,Supprimer,
 "Delete Failed","Suppression échouée",
 "Delete Group",,
 Delivered,,
+Denomination,,
 Depreciation,Amortissement,
 "Depreciation Entry","Entrée d'amortissement",
 Description,,
 Details,Détails,
+"Difference Amount",,
 "Direct Expenses","Dépenses directes",
 "Direct Income","Revenu direct",
 "Directory for database file ${0} does not exist, please select the file manually",,
@@ -301,6 +317,8 @@ Empty,Vide,
 "Enable Discount Accounting","Activer la gestion des réductions",
 "Enable Form Customization",,
 "Enable Inventory","Activer l'inventaire",
+"Enable Invoice Returns",,
+"Enable Point of Sale",,
 "Enable Price List",,
 "Enable Serial Number",,
 "Enable Stock Returns",,
@@ -325,6 +343,7 @@ Error,Erreur,
 "Excise Entry","Entrée d'acquis",
 "Existing Company",,
 Expand,Développer,
+"Expected Amount",,
 Expense,Dépenses,
 "Expense Account","Compte de dépenses",
 Expenses,Dépenses,
@@ -335,7 +354,6 @@ Export,Exporter,
 "Export Format",,
 "Export Successful","Export réussi",
 "Export Wizard",,
-FIFO,,
 Failed,,
 Fax,Fax,
 Features,,
@@ -427,10 +445,12 @@ Inflow,Revenus,
 "Instance Id","Id de l'Instance",
 "Insufficient Quantity",,
 "Insufficient Quantity.",,
+"Insufficient Quantity. Item ${0} has only ${1} quantities available. you selected ${2}",,
 Int,,
 "Intergrated Tax","Taxe intégrée",
 "Internal Precision","Précision interne",
 "Invalid Key Error",,
+"Invalid Quantity for Item ${0}",,
 "Invalid barcode value ${0}.",,
 "Invalid value ${0} for ${1}","Valeur ${0} invalide pour ${1}",
 "Invalid value found for ${0}",,
@@ -452,13 +472,17 @@ Is,Est,
 "Is Landscape",,
 "Is Not","N'est pas",
 "Is Not Empty","N'est pas vide",
+"Is POS Shift Open",,
 "Is Price List Enabled",,
 "Is Required",,
 "Is Whole","Est complet",
 Item,Article,
+"Item ${0} has Zero Quantity",,
 "Item ${0} is a batched item",,
 "Item ${0} is not a batched item",,
+"Item ${0} not in Stock",,
 "Item Description","Description de l'Article",
+"Item Discounts",,
 "Item Name","Nom de l'Article",
 "Item Prices",,
 "Item with From location not found",,
@@ -527,9 +551,9 @@ More,,
 "More Filters","Plus de filtres",
 "More shortcuts will be added soon.",,
 "Movement Type",,
-"Moving Average",,
 Name,Nom,
 Navigate,Naviguer,
+"Need ${0} Serial Numbers for Item ${1}. You have provided ${2}",,
 "Net Total","Total Net",
 "New ${0}","Nouveau ${0}",
 "New ${0} ${1}",,
@@ -582,8 +606,12 @@ Okay,,
 "Open the Export Wizard modal",,
 "Opening (Cr)","Ouverture (Cr)",
 "Opening (Dr)","Ouverture (Dr)",
+"Opening Amount",,
 "Opening Balance Equity","Solde d'ouverture fonds propres",
 "Opening Balances","Soldes d'ouverture",
+"Opening Cash Amount can not be negative.",,
+"Opening Cash In Denominations",,
+"Opening Date",,
 "Opening Entry","Ouvrir l'entrée",
 Options,,
 Orange,,
@@ -591,10 +619,18 @@ Organisation,Organisation,
 Outflow,Dépenses,
 Outstanding,,
 "Outstanding Amount","Montant impayé",
+POS,,
+"POS Counter Cash Account is not set. Please set it on POS Settings",,
+"POS Customer",,
+"POS Inventory is not set. Please set it on POS Settings",,
+"POS Settings",,
+"POS Shift Amount",,
+"POS Write Off Account is not set. Please set it on POS Settings",,
 "Pad Zeros","Remplir de zéros",
 Page,,
 Paid,Payé,
 "Paid ${0}",,
+"Paid Change",,
 Parent,,
 "Parent Account","Compte parent",
 Party,Partie,
@@ -602,6 +638,7 @@ Party,Partie,
 Pay,Payer,
 Payable,Payable,
 Payment,Paiement,
+"Payment ${0} is Saved",,
 "Payment For","Paiement pour",
 "Payment Method","Mode de paiement",
 "Payment No","N° de Paiement",
@@ -637,6 +674,7 @@ Place,Lieu,
 "Please set GSTIN in General Settings.",,
 "Please set Round Off Account in the Settings.","Veuillez définir le compte d'arrondi dans les paramètres",
 "Please set a Display Doc",,
+"Point of Sale",,
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
 "Posting Date","Date d'affichage",
@@ -680,6 +718,7 @@ Purchase,Achat,
 Purchases,Achats,
 Purple,Violet,
 Purpose,,
+"Qty in Batch",,
 "Qty. ${0}",,
 "Qty. in Transfer Unit",,
 Quantity,Quantité,
@@ -689,7 +728,7 @@ Quarterly,Trimestriel,
 Quarters,Trimestres,
 "Quick Search",,
 "Quick edit error: ${0} entry has no name.",,
-"Quote","Devis",
+Quote,Devis,
 "Quote Reference","Référence du devis",
 Rate,Tarif,
 "Rate (${0}) cannot be less zero.","Le Tarif (${0}) ne peut pas être inférieur à zéro.",
@@ -741,9 +780,7 @@ Sales,Ventes,
 "Sales Acc.",,
 "Sales Expenses","Frais de vente",
 "Sales Invoice","Facture de vente",
-"Sales Quote","Devis de vente",
-"Sales Quote Number Series",,
-"Sales Quote Print Template",,
+"Sales Invoice ${0} is Submitted",,
 "Sales Invoice Item","Facture de vente d'article",
 "Sales Invoice Number Series",,
 "Sales Invoice Print Template",,
@@ -755,6 +792,11 @@ Sales,Ventes,
 "Sales Payment",,
 "Sales Payment Account",,
 "Sales Payments","Paiement des ventes",
+"Sales Quote",Devis,
+"Sales Quote Item",,
+"Sales Quote Number Series",,
+"Sales Quote Print Template",,
+"Sales Quotes",Devis,
 "Sales and Purchase",,
 Save,Enregistrer,
 "Save ${0}?",,
@@ -766,6 +808,7 @@ Save,Enregistrer,
 "Save changes made to ${0}?",,
 "Save or Submit an entry.",,
 Saved,Enregistré,
+"Search an Item",,
 "Secured Loans","Prêts garantis",
 "Securities and Deposits","Titres et dépôts",
 Select,Sélectionner,
@@ -782,6 +825,7 @@ Select,Sélectionner,
 "Select column",,
 "Select file","Sélectionnez un fichier",
 "Select folder","Sélectionner un dossier",
+"Select the template type.",,
 Selected,,
 September,,
 "Serial Number",,
@@ -789,6 +833,7 @@ September,,
 "Serial Number ${0} does not exist.",,
 "Serial Number ${0} is not Active.",,
 "Serial Number ${0} is not Inactive",,
+"Serial Number ${0} status is not Active.",,
 "Serial Number Description",,
 "Serial Number is enabled for Item ${0}",,
 "Serial Number is not enabled for Item ${0}",,
@@ -819,6 +864,7 @@ Setup,Configuration,
 "Setup Wizard","Assistant de configuration",
 "Setup system defaults like date format and display precision","Configurez les unités par défaut du système comme le format de la date ou la précision d'affichage des chiffres",
 Shipment,,
+"Shipment ${0} is Submitted",,
 "Shipment Item",,
 "Shipment Location",,
 "Shipment Number Series",,
@@ -871,6 +917,7 @@ Stores,,
 Su,,
 Submit,Soumettre,
 "Submit ${0}?",,
+"Submit & Print",,
 "Submit entries?",,
 Submitted,Soumis,
 Success,,
@@ -889,6 +936,8 @@ Tax,Taxe,
 "Tax Assets","Actifs fiscaux",
 "Tax Detail","Détail des taxes",
 "Tax ID","Numéro d'identification fiscale",
+"Tax Invoice Account",,
+"Tax Payment Account",,
 "Tax Rate",,
 "Tax Summary","relevé fiscal",
 "Tax Template",,
@@ -897,6 +946,7 @@ Tax,Taxe,
 "Taxable Value","Valeur imposable",
 "Taxed Amount","Montant taxé",
 Taxes,Taxes,
+"Taxes and Charges",,
 Teal,"Bleu Sarcelle",
 "Telephone Expenses","Frais téléphonique",
 Template,Modèle,
@@ -949,6 +999,7 @@ Total,,
 "Total Income (Credit)","Revenu total (crédit)",
 "Total Liability (Credit)","Passif total (crédit)",
 "Total Profit","Profit total",
+"Total Quantity",,
 "Total Spending","Dépenses totales",
 "Track Inventory",,
 Transfer,Transfert,
@@ -976,7 +1027,6 @@ Unpaid,Impayé,
 "User Remark","Remarque de l'utilisateur",
 "Utility Expenses","Dépenses de services publics",
 "Validation Error",,
-"Valuation Method",,
 Value,Valeur,
 "Value missing for ${0}","Valeur manquante pour ${0}",
 "Value: ${0}",,
