--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -18,20 +18,20 @@ ${0},,
 "${0} filters applied","${0} تم تطبيق الفيلتر",
 "${0} has linked child accounts.","${0} لديه حسابات فرعية مرتبطة.",
 "${0} of type ${1} does not exist","${0} من النوع ${1} غير موجود",
-"${0} out of ${1}",,
-"${0} party ${1} is different from ${2}",,
-"${0} quantity 1 added.",,
-"${0} row added.",,
-"${0} rows",,
-"${0} rows added.",,
-"${0} saved",,
-"${0} shortcuts",,
-"${0} stored at ${1}",,
-"${0} submitted",,
-"${0} value ${1} does not exist.",,
-0%,,
-03-23-2022,,
-03/23/2022,,
+"${0} out of ${1}","${0} من أصل ${1}",
+"${0} party ${1} is different from ${2}","${0} الطرف ${1} يختلف عن ${2}",
+"${0} quantity 1 added.","تمت إضافة الكمية ${0} 1.",
+"${0} row added.","تمت إضافة صف ${0}.",
+"${0} rows","${0} صف",
+"${0} rows added.","تمت إضافة ${0} صف.",
+"${0} saved","تم حفظ ${0}.",
+"${0} shortcuts","اختصارات ${0}.",
+"${0} stored at ${1}","${0} مخزن في ${1}",
+"${0} submitted","تم إرسال ${0}.",
+"${0} value ${1} does not exist.","قيمة ${0} ${1} غير موجودة.",
+0%,0%,
+03-23-2022,03-23-2022,
+03/23/2022,03/23/2022,
 "1 filter applied","تم تطبيق فلتر واحد",
 2022-03-23,,
 "23 Mar, 2022",,
