update arabic translation

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -209,16 +209,16 @@ Cr.,,
 Create,إنشاء,
 "Create Demo","انشاءنموذج تجريبي",
 "Create Purchase","انشاء مشتريات",
-"Create Purchase Invoice",,
+"Create Purchase Invoice","إنشاء فاتورة الشراء",
 "Create Sale","انشاء مبيعات",
-"Create Sales Invoice",,
-"Create a demo company to try out Frappe Books",,
-"Create a new company and store it on your computer",,
-"Create a new company or select an existing one from your computer",,
-"Create a new entry of the same type as the List View",,
+"Create Sales Invoice","إنشاء فاتورة المبيعات",
+"Create a demo company to try out Frappe Books","أنشئ شركة تجريبية لتجربة Frappe Books",
+"Create a new company and store it on your computer","قم بإنشاء شركة جديدة وقم بتخزينها على جهاز الكمبيوتر الخاص بك",
+"Create a new company or select an existing one from your computer","أنشئ شركة جديدة أو اختر شركة موجودة من جهاز الكمبيوتر الخاص بك",
+"Create a new entry of the same type as the List View","قم بإنشاء إدخال جديد من نفس نوع قائمة العرض",
 "Create new ${0} entry?",,
-"Create your first purchase invoice from the created supplier",,
-"Create your first sales invoice for the created customer",,
+"Create your first purchase invoice from the created supplier","قم بإنشاء فاتورة الشراء الأولى من المورد الذي تم إنشاؤه",
+"Create your first sales invoice for the created customer","قم بإنشاء فاتورة المبيعات الأولى للعميل الذي تم إنشاؤه",
 Created,"تم الانشاء",
 "Created By","تم الانشاء بواسطة",
 "Creating Items and Parties","انشاء الاصناف والعناصر",
@@ -230,44 +230,44 @@ Credit,الائتمان,
 Creditors,الدائنون,
 Currency,العملة,
 "Currency Name","اسم العملة",
-Current,الحالي,
+"Current","الحالي",
 "Current Assets","الأصول الحالية",
 "Current Liabilities","الخصوم المتداولة",
 "Custom Field",,
 "Custom Fields",,
 "Custom Form",,
 "Custom Hex",,
-Customer,الزبون,
+"Customer","الزبون",
 "Customer Created","خلق العميل",
 "Customer Currency","عملة العميل",
-Customers,العملاء,
-Customizations,"  التهيئة",
+"Customers","العملاء",
+"Customizations","التهيئة",
 "Customize Form",,
 "Customize your invoices by adding a logo and address details","تخصيص الفاتورة باضافة الشعار وتفاصيل العنوان",
-Dashboard,"لوحة القيادة",
-Data,,
-"Database Error",,
+"Dashboard","لوحة القيادة",
+"Data","بيانات",
+"Database Error","خطأ في قاعدة البيانات",
 "Database file: ${0}",,
-Date,التاريخ,
+"Date","التاريخ",
 "Date Format","تنسيق التاريخ",
-"Date Time",,
-Day,اليوم,
-Debit,مدين,
-"Debit Note","أشعار مين",
-Debtors,المدينون,
-December,,
+"Date Time","التاريخ والوقت",
+"Day","اليوم",
+"Debit","دَين",
+"Debit Note","بيان الدين",
+"Debtors",المدينون,
+"December","ديسمبر",
 "Decrease print template display scale",,
-Default,,
+"Default","إفتراضي",
 "Default Account","الحساب الافتراضي",
 "Default Cash Denominations",,
 "Default Location"," الموقع الافتراضي",
-Defaults,"الاعدادات الافتراضية ",
-Delete,حذف,
+"Defaults","الاعدادات الافتراضية ",
+"Delete","حذف",
 "Delete ${0}?",,
-"Delete Account",,
-"Delete Failed",,
-"Delete Group",,
-Delivered,,
+"Delete Account","حذف الحساب",
+"Delete Failed","فشل الحذف",
+"Delete Group","حذف المجموعة",
+"Delivered",,
 Denomination,,
 Depreciation,إهلاك,
 "Depreciation Entry","ادخال قيد الاهلاك",
