--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -1,30 +1,30 @@
 ${0},,
 "${0} ${1} already exists.","${0} ${1} já existe.",
-"${0} ${1} does not exist",,
-"${0} ${1} has been modified after loading please reload entry.",,
+"${0} ${1} does not exist","${0} ${1} não existe",
+"${0} ${1} has been modified after loading please reload entry.","${0} ${1} foi modificado após o carregamento. Por favor, recarregue a entrada",
 "${0} ${1} is linked with existing records.","${0} ${1} está ligado aos registos existentes.",
-"${0} account not set in Inventory Settings.",,
-"${0} already saved",,
-"${0} already submitted",,
-"${0} cancelled",,
-"${0} cannot be cancelled",,
-"${0} cannot be deleted",,
-"${0} deleted",,
-"${0} entries failed",,
-"${0} entries imported",,
-"${0} entry failed",,
-"${0} entry imported",,
-"${0} fields selected",,
+"${0} account not set in Inventory Settings.","A conta ${0} não foi definida nas Configurações de Inventário",
+"${0} already saved","${0} já foi salvo",
+"${0} already submitted","${0} já foi enviado",
+"${0} cancelled","${0} cancelado",
+"${0} cannot be cancelled","${0} não pode ser cancelado",
+"${0} cannot be deleted","${0} não pode ser deletado",
+"${0} deleted","${0} deletado",
+"${0} entries failed","${0} entradas falharam",
+"${0} entries imported","${0} entradas importados",
+"${0} entry failed","Falha na entrada de ${0}",
+"${0} entry imported","Entrada ${0} importada",
+"${0} fields selected","${0} campos selecionados",
 "${0} filters applied","${0} filtros aplicados",
-"${0} has linked child accounts.",,
-"${0} of type ${1} does not exist",,
-"${0} out of ${1}",,
+"${0} has linked child accounts.","${0} possui contas filhas vinculadas",
+"${0} of type ${1} does not exist","${0} do tipo ${1} não existe",
+"${0} out of ${1}","${0} de ${1}",
 "${0} party ${1} is different from ${2}",,
 "${0} quantity 1 added.",,
 "${0} row added.",,
-"${0} rows",,
-"${0} rows added.",,
-"${0} saved",,
+"${0} rows","${0} linhas",
+"${0} rows added.","${0} linhas adicionadas",
+"${0} saved","${0} salvos",
 "${0} shortcuts",,
 "${0} stored at ${1}",,
 "${0} submitted",,
@@ -34,27 +34,27 @@ ${0},,
 03/23/2022,,
 "1 filter applied","1 filtro aplicado",
 2022-03-23,,
-"23 Mar, 2022",,
+"23 Mar, 2022","23 de Março de 2022",
 23-03-2022,,
 23.03.2022,,
 23/03/2022,,
 9888900000,,
-"A submittable entry is deleted only if it is in the cancelled state.",,
+"A submittable entry is deleted only if it is in the cancelled state.","Uma entrada submissível só pode ser deletada se estiver cancelada.",
 Account,Conta,
-"Account ${0} does not exist.",,
+"Account ${0} does not exist.","Conta ${0} não existe.",
 "Account Entries","Entradas de conta",
 "Account Name","Nome da conta",
 "Account Type","Tipo de conta",
-Accounting,,
-"Accounting Entries",,
-"Accounting Ledger Entry",,
+Accounting,Contabilidade,
+"Accounting Entries",Lançamentos contábeis,
+"Accounting Ledger Entry","Entrada da razão contábil",
 "Accounting Settings","Configurações de contabilidade",
 Accounts,Contas,
 "Accounts Payable","Contas a pagar",
 "Accounts Receivable","Contas a Receber",
 "Accumulated Depreciation","Depreciação Acumulada",
-Action,,
-Active,,
+Action,Ação,
+Active,Ativo,
 "Add Account","Adicionar conta",
 "Add Customers","Adicionar clientes",
 "Add Group","Adicionar grupo",
@@ -62,27 +62,27 @@ Active,,
 "Add Row","Adicionar Fileira",
 "Add Suppliers","Adicionar Fornecedores",
 "Add Taxes","Acrescentar Impostos",
-"Add a few customers to create your first sales invoice",,
-"Add a few suppliers to create your first purchase invoice",,
-"Add a filter","Acrescentar um filtro",
-"Add a remark",,
-"Add attachment",,
-"Add invoice terms",,
-"Add products or services that you buy from your suppliers",,
-"Add products or services that you sell to your customers",,
-"Add transfer terms",,
-"Add'l Discounts",,
+"Add a few customers to create your first sales invoice","Adicione alguns clientes para criar sua primeira fatura de venda",
+"Add a few suppliers to create your first purchase invoice","Adicione alguns fornecedores para criar sua primeira fatura de compra",
+"Add a filter","Adicionar um filtro",
+"Add a remark","Adicione uma observação",
+"Add attachment","Adicionar anexo",
+"Add invoice terms","Adicione termos de fatura",
+"Add products or services that you buy from your suppliers","Adicione produtos ou serviços que você compra de seus fornecedores",
+"Add products or services that you sell to your customers",Adicione produtos ou serviços que você vende para seus clientes,
+"Add transfer terms","Adicionar termos de transferência",
+"Add'l Discounts","Descontos Adicionais",
 "Additional ${0} Serial Numbers required for ${1} quantity of ${2}.",,
 "Additional quantity (${0}) required${1} to make outward transfer of item ${2} from ${3} on ${4}",,
 Address,Endereço,
 "Address Display","Exibição de endereços",
 "Address Line 1","Linha de endereço 1",
 "Address Line 2","Linha de endereço 2",
-"Address Name",,
+"Address Name","Nome do endereço",
 "Administrative Expenses","Despesas administrativas",
-All,,
+All,Todos,
 Amount,Montante,
-"Amount Paid",,
+"Amount Paid","Montante pago",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Montante: ${0} e anulação: ${1} é menor do que o montante total atribuído às referências: ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Montante: ${0} é menor do que o montante total atribuído às referências: ${1}.",
 Amounts,,
@@ -417,7 +417,7 @@ HSN/SAC,HSN/SAC,
 "Has Batch",,
 "Has Serial Number",,
 "Height (in cm)",,
-Help,,
+Help,Ajuda,
 "Hex Value","Valor hexadecimal",
 "Hidden values will be visible on Print on.",,
 "Hide Get Started","Esconder Começar a Esconder",
@@ -872,55 +872,55 @@ Shipment,,
 "Shipment Terms",,
 Shortcuts,,
 "Should entries be submitted after syncing?",,
-"Show HSN",,
+"Show HSN","Exibir HSN",
 "Show Me",,
 "Show Month/Year",,
 "Single Value",,
 "Skip Child Tables",,
 "Skip Transactions",,
 "Smallest Currency Fraction Value","Menor valor de fracção da moeda",
-Softwares,"Aplicações informáticas",
-"Something has gone terribly wrong. Please check the console and raise an issue.","Algo correu terrivelmente mal. Por favor, verifique a consola e levante um problema.",
+Softwares,,
+"Something has gone terribly wrong. Please check the console and raise an issue.","Algo correu terrivelmente mal. Por favor, verifique o console e levante um problema.",
 "Source of Funds (Liabilities)","Fonte de Fundos (Passivo)",
 "Standard Chart of Accounts",,
-Start,,
-"Start From Row Index",,
+Start,Início,
+"Start From Row Index","Iniciar no índice de linha",
 State,Estado,
-"State Tax","Imposto de Estado",
-Status,Estado,
-Stock,,
-"Stock Adjustment","Ajuste de stock",
-"Stock Assets","Activos em stock",
-"Stock Balance",,
-"Stock Entries",,
-"Stock Expenses","Despesas de stock",
-"Stock In Hand","Estoque em Mão",
-"Stock In Hand Acc.",,
-"Stock Ledger",,
-"Stock Ledger Entry",,
-"Stock Liabilities","Passivos de Stock",
-"Stock Movement",,
-"Stock Movement Item",,
-"Stock Movement No.",,
-"Stock Movement Number Series",,
-"Stock Movement Print Template",,
-"Stock Movements",,
-"Stock Not Received",,
-"Stock Not Shipped",,
-"Stock Not Transferred",,
-"Stock Received But Not Billed","Estoque Recebido Mas Não Faturado",
+"State Tax","Imposto de estado",
+Status,,
+Stock,Estoque,
+"Stock Adjustment","Ajuste de estoque",
+"Stock Assets","Ativos em estoque",
+"Stock Balance","Balanço de estoque",
+"Stock Entries","Entradas de estoque",
+"Stock Expenses","Despesas de estoque",
+"Stock In Hand","Estoque em mão",
+"Stock In Hand Acc.","Conta de estoque em mãos"",
+"Stock Ledger","Razão de estoque",
+"Stock Ledger Entry","Entrada de razão de estoque",
+"Stock Liabilities","Passivos de estoque",
+"Stock Movement","Movimentação de estoque",
+"Stock Movement Item","Item de movimentação de estoque",
+"Stock Movement No.","N° de movimentação de estoque",
+"Stock Movement Number Series","Série de números de movimentação de estoque",
+"Stock Movement Print Template","Formato de impressão de movimentação de estoque",
+"Stock Movements","Movimentações de estoque",
+"Stock Not Received","Estoque não recebido",
+"Stock Not Shipped","Estoque não enviado",
+"Stock Not Transferred","Estoque não transferido",
+"Stock Received But Not Billed","Estoque recebido mas não faturado",
 "Stock Received But Not Billed Acc.",,
 "Stock Transfer Item",,
 "Stock Unit",,
 StockTransfer,,
 Stores,,
 Su,,
-Submit,Submeter,
-"Submit ${0}?",,
-"Submit & Print",,
-"Submit entries?",,
-Submitted,Submetido,
-Success,,
+Submit,Enviar,
+"Submit ${0}?","Enviar ${0}?",
+"Submit & Print","Enviar e imprimir",
+"Submit entries?","Enviar entradas?",
+Submitted,Enviado,
+Success,Sucesso,
 Supplier,Fornecedor,
 "Supplier Created","Fornecedor Criado",
 Suppliers,Fornecedores,
@@ -990,69 +990,69 @@ To,,
 "Toggle the Report filter",,
 "Top Expenses","Despesas de topo",
 Total,,
-"Total Amount",,
-"Total Asset (Debit)",,
-"Total Debit: ${0} must be equal to Total Credit: ${1}",,
-"Total Discount",,
-"Total Equity (Credit)",,
-"Total Expense (Debit)",,
-"Total Income (Credit)",,
-"Total Liability (Credit)",,
-"Total Profit",,
-"Total Quantity",,
+"Total Amount","Montante total",
+"Total Asset (Debit)","Ativo Total (Débito)",
+"Total Debit: ${0} must be equal to Total Credit: ${1}","Débito total: ${0} deve ser igual ao Crédito total: ${1}",
+"Total Discount","Desconto total",
+"Total Equity (Credit)","Patrimônio Total (Crédito)",
+"Total Expense (Debit)","Despesa Total (Débito)",
+"Total Income (Credit)","Renda total (crédito)",
+"Total Liability (Credit)","Responsabilidade Total (Crédito)",
+"Total Profit","Lucro total",
+"Total Quantity","Quantidade total",
 "Total Spending","Gastos totais",
-"Track Inventory",,
-Transfer,,
-"Transfer No",,
+"Track Inventory","Rastrear inventário",
+Transfer,"Transferência",
+"Transfer No","Nº de transferência",
 "Transfer Type","Tipo de transferência",
-"Transfer Unit",,
-"Transfer Unit ${0} is not applicable for Item ${1}",,
-"Transfer will cause future entries to have negative stock.",,
+"Transfer Unit","Unidade de transferência",
+"Transfer Unit ${0} is not applicable for Item ${1}","A unidade de transferência ${0} não é aplicável ao item ${1}",
+"Transfer will cause future entries to have negative stock.","A transferência fará com que as entradas futuras tenham estoque negativo.",
 "Travel Expenses","Despesas de viagem",
 "Trial Balance","Balanço do ensaio",
 Tu,,
 Type,Tipo,
-"Type to search...",,
-UOM,,
+"Type to search...","Digite para procurar...",
+UOM,Unidade de medida,
 "UOM Conversion Item",,
-"UOM Conversions",,
-Unit,,
+"UOM Conversions","Conversões de unidades de medida",
+Unit,Unidade,
 "Unit Type","Tipo de unidade",
 Unpaid,"Não pago",
-"Unpaid ${0}",,
+"Unpaid ${0}","${0} não pago",
 "Unsecured Loans","Empréstimos não garantidos",
-"Until Date",,
-"Use Full Width",,
-"Use List Filters",,
+"Until Date","Até a data",
+"Use Full Width","Usar largura máxima",
+"Use List Filters","Usar filtros de lista",
 "User Remark","Observação do utilizador",
 "Utility Expenses","Despesas de utilidades",
-"Validation Error",,
+"Validation Error","Erro de validação",
 Value,Valor,
 "Value missing for ${0}","Valor em falta por ${0}",
-"Value: ${0}",,
-Version,,
-View,,
-"View Accounting Entries",,
-"View Paid Invoices",,
-"View Purchases",,
-"View Sales",,
-"View Stock Entries",,
-"View Unpaid Invoices",,
-"View linked entries",,
-We,,
+"Value: ${0}","Value: ${0}",
+Version,"Versão",
+View,"Ver",
+"View Accounting Entries","Ver lançamentos contábeis",
+"View Paid Invoices","Ver faturas pagas",
+"View Purchases","Ver compras",
+"View Sales","Ver vendas",
+"View Stock Entries","Ver entradas de estoque",
+"View Unpaid Invoices","Ver faturas não pagas",
+"View linked entries","Ver entradas vinculadas",
+We,Nós,
 "Welcome to Frappe Books","Bem-vindo à Frappe Books",
-"Width (in cm)",,
+"Width (in cm)","Largura (em cm)",
 "Write Off",Anular,
 "Write Off Account","Anulação de conta",
-"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings",,
-"Write Off Account not set. Please set Write Off Account in General Settings",,
-"Write Off Entry",,
-"Year to Date",,
-Yearly,,
-Years,,
-Yellow,,
+"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings","A conta de baixa ${0} não existe. Defina a conta de baixa nas configurações gerais",
+"Write Off Account not set. Please set Write Off Account in General Settings","Conta de baixa não definida. Defina a conta de baixa nas configurações gerais",
+"Write Off Entry","Cancelar entrada",
+"Year to Date","No acumulado do ano",
+Yearly,Anualmente,
+Years,Anos,
+Yellow,Amarelo,
 Yes,Sim,
-"check values and click on",,
-"in Batch ${0}",,
+"check values and click on","verifique valores e clique em",
+"in Batch ${0}","em lote ${0}",
 john@doe.com,,
-"to apply changes",,
+"to apply changes","para aplicar alterações",
