update liability translation

--- a/translations/da.csv
+++ b/translations/da.csv
@@ -219,7 +219,7 @@ Currency,Valuta,
 "Currency Name",Valutanavn,
 Current,Nuværende,
 "Current Assets","Nuværende aktiver",
-"Current Liabilities","Nuværende forpligtelser",
+"Current Liabilities","Nuværende passiver",
 "Custom Field","Brugerdefineret felt",
 "Custom Fields","Brugerdefinerede felter",
 "Custom Form","Brugerdefineret formular",
@@ -493,7 +493,7 @@ General,Generelt,
 "Loading Report...","Indlæser rapport...",
 "Loading instance...","Indlæser instans...",
 "Loading...","Indlæser...",
-"Loans (Liabilities)","Lån (forpligtelser)",
+"Loans (Liabilities)","Lån (passiver)",
 "Loans and Advances (Assets)","Lån og forskud (aktiver)",
 "Locale","Lokalitet",
 "Location","Sted",
@@ -689,7 +689,7 @@ General,Generelt,
 "Quarters","Kvartaler",
 "Quick Search","Hurtigsøgning",
 "Quick edit error: ${0} entry has no name.","Hurtig redigeringsfejl: ${0} post har intet navn.",
-"Rate","Vurdering",
+"Rate","Sats",
 "Rate (${0}) cannot be less zero.","Rate (${0}) kan ikke være mindre end nul.",
 "Rate (${0}) has to be greater than zero","Rate (${0}) skal være større end nul",
 "Rate can't be negative.","Rate kan ikke være negativ.",
@@ -829,7 +829,7 @@ Shortcuts,"Genveje",
 "Smallest Currency Fraction Value","Mindste valutabrøkdelværdi",
 Softwares,"Software",
 "Something has gone terribly wrong. Please check the console and raise an issue.","Der er sket noget frygteligt galt. Kontroller konsollen og opret en sag.",
-"Source of Funds (Liabilities)","Kilde til midler (forpligtelser)",
+"Source of Funds (Liabilities)","Kilde til midler (passiver)",
 "Standard Chart of Accounts","Standard kontoplan",
 Start,"Start",
 "Start From Row Index","Start fra rækkeindeks",
@@ -846,7 +846,7 @@ Stock,Lager,
 "Stock In Hand Acc.","Lager på hånden (akkumuleret)",
 "Stock Ledger","Lagerbog",
 "Stock Ledger Entry","Lagerbogspost",
-"Stock Liabilities","Lagerforpligtelser",
+"Stock Liabilities","Lagerpassiver",
 "Stock Movement","Lagerbevægelse",
 "Stock Movement Item","Lagerbevægelsesvare",
 "Stock Movement No.","Lagerbevægelsesnummer",
