--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -108,7 +108,7 @@ August,Agosto,
 "Auto Stock Transfer","Transferência automática de estoque",
 Autocomplete,Autocompletar,
 Back,Voltar,
-"Back Reference","Contra-referência,
+"Back Reference","Contra-referência",
 "Bad import data, could not read file.","Arquivo mal formatado, não foi possível ler o arquivo.",
 Balance,Balanço,
 "Balance Amount","Valor do Balanço",
